refactor(tests): replace taxi usages of `findAll` with `find`

--- a/docs/content/casks/cask-server.mdx
+++ b/docs/content/casks/cask-server.mdx
@@ -160,7 +160,7 @@ For this demo we going to use VyneQL.
 POST http://localhost:9022/api/vyneql
 
 Payload:
-findAll {
+find {
    vyne.casks.Order[](
       OrderDate  >= "2020-03-01T00:00:00.000Z",
       OrderDate < "2020-01-04T12:00:00.000Z"
