--- a/docs/content/reference/pipelines-2.0/pipeline-specs.mdx
+++ b/docs/content/reference/pipelines-2.0/pipeline-specs.mdx
@@ -158,6 +158,7 @@ The following configuration parameters are available:
 |---------|-----------|--------|-------------|
 |`query`|The query to be executed. See the sample for an example. |true||
 |`pollSchedule`|A [Spring-flavored cron expression](https://www.baeldung.com/cron-expressions#cron-expression), defining the frequency this query should be invoked.|true||
+|`preventConcurrentExecution`|When set to true, specifically controls the next execution time when the last execution finishes.|false||
          
 
 #### Example
@@ -168,7 +169,8 @@ The following configuration parameters are available:
     "type" : "query",
     "direction" : "INPUT",
     "query" : "find { Person( FirstName == 'Jim' ) }",
-    "pollSchedule" : "* * * * * *"
+    "pollSchedule" : "* * * * * *",
+    "preventConcurrentExecution" : false
   }
 }
 ```
