--- a/docs/content/reference/pipelines-2.0/pipeline-specs.mdx
+++ b/docs/content/reference/pipelines-2.0/pipeline-specs.mdx
@@ -84,6 +84,7 @@ The following configuration parameters are available:
 |`targetTypeName`|The name of the type that content from the S3 bucket should be consumed as|true||
 |`queueName`|The name of the SQS queue|true||
 |`pollSchedule`|A cron expression that defines how frequently to check for new messages. Defaults to every second.|false||
+|`preventConcurrentExecution`|When set to true, specifically controls the next execution time when the last execution finishes.|false||
          
 
 #### Example
@@ -352,6 +353,12 @@ to the database.
 #### Batching inserts
 In order to reduce load on the database, inserts are batched in windows of 500ms.
 
+#### Write disposition
+Different pipelines have different needs in terms of what should be the result of subsequent runs. In some cases it is preferable to append the new data into the same table. For example when the new data is an increment to the existing dataset. In other cases it makes sense to replace the data with the new batch which is preferable when data always contains the full dataset. There are two supported write disposition modes to cater for different needs:
+- `APPEND`: The data is appended to the existing table on each run of the pipeline. This is the default.
+- `RECREATE`: The data is written to a new table, and the view is switched to point to the new table. It is the responsibility of the user to ensure that there aren't two concurrent runs as this introduces a race condition for the switch over and especially stale table deletion if enabled. The source needs to support this by providing a unique identifier for each run for it to work. In general, this only works for batch sources as the streaming sources don't ever complete. Currently only the AWS SQS S3 source supports this.
+The default write disposition is `APPEND`.
+
 #### Parameters
 
 The following configuration parameters are available:
@@ -360,6 +367,7 @@ The following configuration parameters are available:
 |---------|-----------|--------|-------------|
 |`connection`|The name of a connection, configured in Vyne's connection manager|true||
 |`targetTypeName`|The fully qualified name of the type which content being pushed to the database should be read as|true||
+|`writeDisposition`|Whether to append new data into the existing table (APPEND), or to create a new table with a unique name and switch over the view to point to the newly created table (RECREATE).|false||
          
 
 #### Example
@@ -371,6 +379,7 @@ The following configuration parameters are available:
     "direction" : "OUTPUT",
     "connection" : "my-connection",
     "targetTypeName" : "com.demo.Customer",
+    "writeDisposition" : "APPEND",
     "targetType" : "com.demo.Customer",
     "windowDurationMs" : 500
   }
